--- a/snapshot/detail.html
+++ b/snapshot/detail.html
@@ -3,14 +3,14 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>レストラン詳細情報 - レストラン・レビュ・サイト</title>
+	<title>レストラン詳細情報 - レストラン・レビュー・サイト</title>
 	<link rel="stylesheet" href="../assets/css/style.css" />
 	<link rel="stylesheet" href="../assets/css/detail.css" />
 </head>
 
 <body id="detail">
 	<header>
-		<h1><a href="list.html">レストラン・レビュ・サイト</a></h1>
+		<h1><a href="list.html">レストラン・レビュー・サイト</a></h1>
 	</header>
 	<main>
 		<article id="description">
@@ -28,7 +28,7 @@
 			</table>
 		</article>
 		<article id="reviews">
-			<h2>レビュ一覧</h2>
+			<h2>レビュー一覧</h2>
 			<dl>
 				<dt>★★★★☆</dt>
 				<dd>常連の者で、いつも夫婦で伺っています。席数が少ないので予約した方が安心ですが、その分落ち着いて食事できますよ。コースのメインは基本的にシェフにお任せ。来るたびに、新しい味との出会いを楽しめるお店です。（totsuka）</dd>
@@ -39,7 +39,7 @@
 			</dl>
 		</article>
 		<article id="review">
-			<h2>レビュを書き込む</h2>
+			<h2>レビューを書き込む</h2>
 			<form name="review_form" action="detail.html" method="post">
 				<table class="review">
 					<tr>
@@ -62,12 +62,12 @@
 						</td>
 					</tr>
 					<tr>
-						<th>レビュ</th>
+						<th>レビュー</th>
 						<td><textarea name="comment"></textarea></td>
 					</tr>
 				</table>
 				<input type="submit" value="投稿" />
-				<input type="reset" value="クリア" />
+				<input type="reset" value="クリアー" />
 			</form>
 		</article>
 	</main>
