--- a/snapshot/list.html
+++ b/snapshot/list.html
@@ -3,14 +3,14 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>レストラン一覧 - レストラン・レビュ・サイト</title>
+	<title>レストラン一覧 - レストラン・レビュー・サイト</title>
 	<link rel="stylesheet" href="../assets/css/style.css" />
 	<link rel="stylesheet" href="../assets/css/list.css" />
 </head>
 
 <body id="list">
 	<header>
-		<h1><a href="list.html">レストラン・レビュ・サイト</a></h1>
+		<h1><a href="list.html">レストラン・レビュー・サイト</a></h1>
 	</header>
 	<main>
 		<div class="clearfix">
